[package]
name = "fedimint-leptos-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'

[dependencies]
async-trait = "0.1.68"
anyhow = "1.0.71"
base64 = "0.21.3"
fedimint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.2.1" }
fedimint-core = { git = "https://github.com/fedimint/fedimint", tag = "v0.2.1" }
fedimint-wallet-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.2.1" }
fedimint-mint-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.2.1" }
fedimint-ln-client = { git = "https://github.com/fedimint/fedimint", tag = "v0.2.1" }
fedimint-prediction-markets-common = { git = "https://github.com/Fedimint-Prediction-Markets/fedimint-prediction-markets" }
fedimint-prediction-markets-client = { git = "https://github.com/Fedimint-Prediction-Markets/fedimint-prediction-markets" }
futures = "0.3.28"
hex = "0.4.3"
leptos = { version = "0.4.8", features = ["csr"] }
leptos-qr-scanner = { git = "https://github.com/elsirion/leptos-qr-scanner", rev = "75e976e99d9c1ed64921081a23f7da823d2a0b6d" }
leptos_icons = { version = "0.0.15", features = ["macros", "BsLightningCharge", "FaCoinsSolid"] }
leptos_meta = { version = "0.4.8", features = ["csr"] }
lightning-invoice = { version = "0.26.0", features = [ "serde" ] }
qrcode-generator = "4.1.8"

console_error_panic_hook = "0.1.7"
tracing = "0.1.37"
tracing-wasm = "0.2.1"

thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.28.2", features = [ "rt", "sync", "time" ] }
tokio-stream = "0.1.14"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.65", features = [ "Navigator", "Window", "ServiceWorkerContainer" ] }
gloo-storage = "0.3.0"
rand = "0.8.5"
secp256k1 = "0.24.3"

[build-dependencies]
fedimint-build = "0.2.1-rc1"