[package]
name = "webimint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"

[dependencies]
async-trait = "0.1.68"
anyhow = "1.0.71"
base64 = "0.21.3"
fedimint-client = "0.2.1-rc1"
fedimint-core = "0.2.1-rc1"
fedimint-wallet-client = "0.2.1-rc1"
fedimint-mint-client = "0.2.1-rc1"
fedimint-ln-client = "0.2.1-rc1"
futures = "0.3.28"
hex = "0.4.3"
leptos = { version = "0.6.5", features = ["csr"] }
leptos-use = "0.10.2"
leptos-qr-scanner = { git = "https://github.com/elsirion/leptos-qr-scanner", rev = "5830bd6f75d7836189ef1434f71a10222a737a44" }
leptos_meta = { version = "0.6.5", features = ["csr"] }
lightning-invoice = { version = "0.26.0", features = [ "serde" ] }
qrcode-generator = "4.1.8"

console_error_panic_hook = "0.1.7"
tracing = "0.1.37"
tracing-wasm = "0.2.1"

thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.28.2", features = [ "rt", "sync", "time" ] }
tokio-stream = "0.1.14"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.65", features = [ "Navigator", "Window", "ServiceWorkerContainer" ] }
gloo-storage = "0.3.0"
rand = "0.8.5"

[build-dependencies]
fedimint-build = "0.2.1-rc1"
