[package]
name = "rexie-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.4.8", features = ["csr"] }
rexie = "0.4.2"
tokio = { version = "1.28.2", features = [ "rt", "sync", "time" ] }
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

